--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/course_list_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingTop="@dimen/list_item_top_padding"
     android:paddingBottom="@dimen/list_item_bottom_padding"
     android:paddingLeft="@dimen/list_item_horizontal_padding"
@@ -9,8 +10,8 @@
     
     <ImageView
         android:id="@+id/image"
-        android:layout_width="60dp"
-        android:layout_height="45dp"
+        android:layout_width="80dp"
+        android:layout_height="60dp"
         android:scaleType="centerCrop"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="8dp"
@@ -21,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/image"
-        android:textSize="18sp"/>
+        android:textColor="@color/main_colour"
+        android:textSize="16sp"/>
 
 </RelativeLayout>
