Get basic shared element transition working for the imageviews

--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -15,6 +15,7 @@
         android:scaleType="centerCrop"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="8dp"
+        android:transitionName="course_image"
         />
 
     <TextView
