do shared element transitions using both imageView and textview at the same time

--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/image"
         android:textColor="@color/main_colour"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:transitionName="course_title"/>
 
 </RelativeLayout>
